--- a/backend/package.json
+++ b/backend/package.json
@@ -21,5 +21,8 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
+  },
+  "engines": {
+    "node": ">=14.20.1"
   }
 }
